# Laser-App-Antigravity

./: .gitignore  HOW_TO_UPDATE.md  diff.txt  latest.json  latest.template.json  package.json  pnpm-lock.yaml  signer_help.txt  tauri.key  tauri.key.pub
scripts/: before-dev.mjs  build-app.mjs
server/: package.json  tsconfig.cjs.json
server/dist-cjs/: drizzle.config.js
server/dist-cjs/src/: amazon-custom.js  config.js  db.js  index.js  lightburn.js  logger.js  migrate.js  parser.js  schema.js  seed.js  sync.js
server/drizzle/: 0007_add_order_item_id.sql  0008_remove_order_id_unique.sql  0009_add_quantity_print_counts.sql
server/drizzle/meta/: _journal.json
server/public/: index.html
server/public/assets/: index-6bwuWyGC.js  index-CRfSgk0f.css  index-Ctz5bPvJ.js  index-DIRvt2rm.js  index-DbblCI7H.js  index-Do7AbOeS.css  index-DxDWmYGC.js  index-PJwF7KNh.css  index-b1qUOvcc.js  index-vQwzP_RM.css
server/scripts/: build-sidecar.mjs  bundle.mjs
server/src/: config.ts  db.ts  index.ts  lightburn.ts  logger.ts  migrate.ts  parser.ts  schema.ts  sync.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs  main.rs
web/: package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  OrderGroupRow.tsx  OrderRow.tsx  ReworkSection.tsx  Settings.tsx  api.ts  types.ts
web/src/components/: CustomDataModal.tsx
